Implementing Tab System in Sales Order View, Part 1

--- a/src/app/design/adminhtml/default/default/layout/zendesk.xml
+++ b/src/app/design/adminhtml/default/default/layout/zendesk.xml
@@ -27,17 +27,26 @@
         <reference name="head">
             <action method="addCss"><stylesheet>zendesk/zendesk.css</stylesheet></action>
         </reference>
-        <reference name="content">
-            <block type="zendesk/adminhtml_order_view_tickets" name="zendesk_order_view_tickets" after="sales_order_edit"/>
+        <reference name="sales_order_tabs">
+            <action method="addTab">
+                <name>zendesk_order_view_tickets</name>
+                <block>zendesk/adminhtml_order_view_tickets</block>
+            </action>
         </reference>
     </adminhtml_sales_order_view>
+
+    <adminhtml_zendesk_salesorderviewticketgrid>
+        <block type="core/text_list" name="root" output="toHtml">
+            <block type="zendesk/adminhtml_order_view_ticketsGrid" name="zendesk_order_view_tickets_grid"/>
+        </block>
+    </adminhtml_zendesk_salesorderviewticketgrid>
 
     <adminhtml_customer_edit>
         <reference name="customer_edit_tab_view">
             <block type="adminhtml/template" after="-" name="zendesk.tickets" template="zendesk/customer/tickets.phtml"/>
         </reference>
     </adminhtml_customer_edit>
-    
+
     <adminhtml_zendesk_index>
         <reference name="left">
             <block type="zendesk/adminhtml_menu" name="adminhtml.left.menu">
